--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         .hero {
             min-height: 100vh;
             background: linear-gradient(rgba(0, 50, 100, 0.6), rgba(0, 100, 80, 0.5)), 
-                        url('/images/download.jpg') no-repeat center center/cover;
+                        url('images/download.jpg') no-repeat center center/cover;
             display: flex;
             align-items: center;
             position: relative;
@@ -355,7 +355,7 @@
     <nav class="navbar navbar-expand-lg fixed-top">
         <div class="container">
             <a class="navbar-brand" href="#">
-               <img src="/images/Picsart_25-12-14_10-09-25-560.png" alt="تجهيز الخليج" style="width: 150px;">
+               <img src="images/Picsart_25-12-14_10-09-25-560.png" alt="تجهيز الخليج" style="width: 150px;">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
@@ -623,7 +623,7 @@
                 <div class="modal-body position-relative">
                     <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
                     <div class="ratio ratio-16x9">
-                        <iframe id="promoVideo" src="/images/إعلان سياحة السفر العصرية باللونين الأزرق والأبيض قصتك.mp4" title="Video" allowfullscreen></iframe>
+                        <iframe id="promoVideo" src="images/إعلان سياحة السفر العصرية باللونين الأزرق والأبيض قصتك.mp4" title="Video" allowfullscreen></iframe>
                     </div>
                 </div>
             </div>
